[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "saicinpainting"
version = "0.1.0"
description = "LaMa: Resolution-robust Large Mask Inpainting with Fourier Convolutions"
documentation = "https://github.com/luca-medeiros/lang-segment-anything/blob/main/README.md"
repository = "https://github.com/luca-medeiros/lang-segment-anything"
authors = [
    "Roman Suvorov",
    "Elizaveta Logacheva",
    "Anton Mashikhin",
    "Anastasia Remizova",
    "Arsenii Ashukha",
    "Aleksei Silvestrov",
    "Naejin Kong",
    "Harshith Goka",
    "Kiwoong Park",
    "Victor Lempitsky",
    ]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
torch = ">=1.8"
torchvision = "*"
pyyaml = "*"
tqdm = "*"
numpy = "*"
easydict= ">=1.9"
scikit-image = ">=0.17.2"
scikit-learn = ">=0.24.2"
opencv-python = "*"
tensorflow = "*"
joblib = "*"
matplotlib = "*"
pandas = "*"
albumentations = "0.5.2"
hydra-core = ">=1.1"
pytorch-lightning = ">=1.2.9"
tabulate = "*"
kornia = ">=0.5"
webdataset = "*"
packaging = "*"
omegaconf = "*"
# "wldhx.yadisk-direct" = "*"
